--- a/Portifólio 1- ALURA/style.css
+++ b/Portifólio 1- ALURA/style.css
@@ -5,31 +5,39 @@
 *{
     margin: 0;
     padding: 0;
-}
-
-body{
-    background-color: black;
-    color: #F6F6F6;
-    height: 100vh;
     box-sizing: border-box;
 }
 
-strong.destaque_titulo{
-    color: #22D4FD;
+body{
+    height: 100vh;
+    background-color: black;
+    color: white
+}
+
+.apresentacao > img{
+    width: 365px;
+    height: 370px;
+    border-radius: 7px;
+}
+
+.apresentacao > img:hover{
+    transform: translateY(-15px);
+    transition: .3s;
+    transition-timing-function: ease;
 }
 
 .apresentacao{
     margin: 10%;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
 }
 
 .apresentacao__conteudo{
-    width: 550px;
+    width: 570px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 36px;
 }
 
 .apresentacao__conteudo__title{
@@ -37,30 +45,32 @@ strong.destaque_titulo{
     font-size: 30px;
 }
 
+.destaque_titulo{
+    color: #22D4FD;
+}
+
 .apresentacao__conteudo__texto{
     font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    text-align: justify;
+    color: #F6F6F6;
 }
 
 .apresentacao__link{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .apresentacao__link__a{
     background-color: #22D4FD;
     color: black;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    font-weight: 600;
     text-align: center;
     text-decoration: none;
-    width: 250px;
-    padding: 21.5px 0px;
-    border-radius: 16px;
-}
-
-.apresentacao > img{
-    width: 390px;
-    height: 390px;
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    width: 255px;
+    padding: 16px;
     border-radius: 7px;
 }
