--- a/Portifólio 1- ALURA/estilos/style.css
+++ b/Portifólio 1- ALURA/estilos/style.css
@@ -33,15 +33,14 @@ body{
 
 .cabecalho__menu__links{
     font-family: var(--font-secundaria);
-    font-size: 18px;
+    font-size: 1.12rem;
     text-decoration: none;
     font-weight: 600;
     color: var(--cor-terciaria);
 }
 
 .apresentacao > img{
-    width: 365px;
-    height: 370px;
+    width: 41%;
     border-radius: 7px;
 }
 
@@ -59,7 +58,7 @@ body{
 }
 
 .apresentacao__conteudo{
-    width: 570px;
+    width: 57%;
     display: flex;
     flex-direction: column;
     gap: 36px;
@@ -68,7 +67,7 @@ body{
 
 .apresentacao__conteudo__title{
     font-family: var(--font-principal);
-    font-size: 30px;
+    font-size: 1.87rem;
     color: var(--cor-secundaria);
 }
 
@@ -80,7 +79,7 @@ body{
     font-family: var(--font-secundaria);
     text-align: justify;
     line-height: 23px;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .destaque__lista{
@@ -89,7 +88,7 @@ body{
 
 .apresentacao__conteudo__texto{
     font-family: var(--font-secundaria);
-    font-size: 16px;
+    font-size: 1rem;
     text-align: justify;
     color: var(--cor-secundaria);
 }
@@ -102,7 +101,7 @@ body{
     gap: 30px;
 }
 
-.apresentacao__link__a{
+.apresentacao__link__navegacao{
     display: flex;
     justify-content: center;
     gap: 10px;
@@ -110,10 +109,10 @@ body{
     color: var(--cor-secundaria);
     text-align: center;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-family: var(--font-secundaria);
     font-weight: 600;
-    width: 280px;
+    width: 40%;
     padding: 16px;
     border: 2px solid var(--cor-terciaria);
     border-radius: 8px;
@@ -126,14 +125,14 @@ body{
 .apresentacao__link__subtitle{
     font-family: var(--font-principal);
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.12rem;
 }
 
 .rodape{
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
     font-family: var(--font-secundaria);
-    font-size: 18px;
+    font-size: 1.12rem;
     font-weight: 400;
     text-align: center;
     padding: 20px;
